--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "^10.0.8",
     "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "^10.0.8",
+    "@angular/localize": "^10.0.8",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "^10.0.8",
     "@angular/platform-browser-dynamic": "^10.0.8",
@@ -26,6 +27,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@nestjs/mongoose": "^7.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@polymer/paper-item": "^3.0.1",
     "bootstrap": "^4.5.2",
     "concurrently": "^5.3.0",
@@ -33,6 +35,7 @@
     "markdown": "^0.5.0",
     "mongoose": "^5.9.28",
     "ng-sidebar": "^9.4.2",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.6.2",
     "tslib": "^1.13.0",
